# snowflake-streamlit-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
data/: queries.py  snowflake_client.py
processing/: transform.py
setup/: load_menu_data.sql
tests/: test_transform.py
