[project]
name = "snowflake-streamlit-mvp"
version = "0.1.0"
description = "Tasty Bytes Menu Analytics — Snowflake + Streamlit dashboard"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
